--- a/src/app/indexer/town/town.component.html
+++ b/src/app/indexer/town/town.component.html
@@ -51,7 +51,7 @@
 			              <mat-tab-group mat-stretch-tabs>
 				              <mat-tab class="history-chart" style="padding: 20px 0; overflow: hidden !important;">
 					              <ng-template mat-tab-label>
-						              <mat-icon style="opacity: 1; vertical-align: bottom;">account_balance</mat-icon>&nbsp;Town intelligence
+						              <mat-icon style="opacity: 1; vertical-align: bottom;">account_balance</mat-icon>&nbsp;<span class="hidden-xs hidden-sm">Town intelligence</span><span class="hidden-lg hidden-md">Units</span>
 					              </ng-template>
 					              <br/>
 
@@ -78,109 +78,112 @@
 						              <h3 style='font-weight: 300; color: #304357;'>
 							              <span class='world-title' style='color: #18BC9C;'>Unit intelligence history</span>
 						              </h3>
-						              <div class="table intel-table" id="table_all" style="">
+						              <div style="overflow: auto;">
+							              <div class="table intel-table" id="table_all" style="">
 
-							              <div class="row_custom header bg-gd-2" >
-								              <div class="cell" style="max-width: 10% !important; width: 10%;">
-									              Type
+								              <div class="row_custom header bg-gd-2" >
+									              <div class="cell" style="max-width: 10% !important; width: 10%;">
+										              Type
+									              </div>
+									              <div class="cell" style="max-width: 20% !important; width: 20%;">
+										              Date
+									              </div>
+									              <div class="cell text-left">
+										              Units
+									              </div>
+									              <div class="cell text-left" *ngIf="hasHero">
+										              Hero
+									              </div>
+									              <div class="cell text-left" *ngIf="hasGod">
+										              God
+									              </div>
+									              <div class="cell" *ngIf="hasWall">
+										              Wall
+									              </div>
+									              <div class="cell" *ngIf="hasStonehail">
+										              Stonehail
+									              </div>
+									              <div class="cell" *ngIf="hasSilver">
+										              Silver
+									              </div>
+									              <div class="cell hidden-xs hidden-sm" *ngIf="hasConquest" style="max-width: 15vw !important; width: 15vw;">
+										              Siege report
+									              </div>
+									              <div class="cell" *ngIf="csa!=false"></div>
 								              </div>
-								              <div class="cell" style="max-width: 20% !important; width: 20%;">
-									              Date
-								              </div>
-								              <div class="cell text-left">
-									              Units
-								              </div>
-								              <div class="cell text-left" *ngIf="hasHero">
-									              Hero
-								              </div>
-								              <div class="cell text-left" *ngIf="hasGod">
-									              God
-								              </div>
-								              <div class="cell" *ngIf="hasWall">
-									              Wall
-								              </div>
-								              <div class="cell" *ngIf="hasStonehail">
-									              Stonehail
-								              </div>
-								              <div class="cell" *ngIf="hasSilver">
-									              Silver
-								              </div>
-								              <div class="cell" *ngIf="hasConquest">
-									              Siege report
-								              </div>
-								              <div class="cell" *ngIf="csa!=false"></div>
-							              </div>
 
-							              <div class='row_custom' *ngFor="let town of allCities">
-								              <div class="cell" matTooltip="{{town.type}}">
-									              <img src="../../assets/images/game/towninfo/attack.png" *ngIf="town.type === 'friendly_attack'">
-									              <div *ngIf="town.type === 'enemy_attack'" style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: ;">
-										              <img src="../../assets/images/game/towninfo/attack.png">
-									              </div>
-									              <img src="../../assets/images/game/towninfo/wisdom.png" *ngIf="town.type === 'wisdom'">
-									              <img src="../../assets/images/game/towninfo/support.png" *ngIf="town.type === 'support'">
-									              <img src="../../assets/images/game/towninfo/conquer.png" *ngIf="town.type === 'attack_on_conquest'">
-									              <img src="../../assets/images/game/towninfo/espionage_2.67.png" *ngIf="town.type === 'spy'">
-								              </div>
-								              <div class="cell">
-									              {{town.date | IndexDate}}
-								              </div>
-								              <div class="cell" style="display: flex; margin-bottom: 8px;">
-					                      <span style="transform: scale(1.05); float: left; margin: 8px 12px 0 0;" *ngFor="let unit of town.units | ValuesPipe; let i = index;"
-					                            matTooltip="{{unit?.name?.replace('_',' ')}}">
-					                        <div class="unit_icon40x40 {{unit?.name}}"><span class="unit-val">{{unit?.count}}</span></div>
-					                        <span style="color: #d00;" *ngIf="unit?.killed>0">-{{unit?.killed}}</span>
-					                      </span>
-								              </div>
-								              <div class="cell" *ngIf="hasHero" style="min-width: 50px;">
-					                      <span style="transform: scale(1.05); float: left; margin: -19px 0 0 0;"
-					                            matTooltip="{{town?.hero?.replace('_',' ')}}">
-					                        <div class="unit_icon40x40 {{town?.hero}}"></div>
-					                      </span>
-								              </div>
-								              <div class="cell" *ngIf="hasGod" style="min-width: 50px;">
-									              <span style="transform: scale(1.05); float: left; margin: -18px 0 0 0;"
-									                    matTooltip="{{town.god}}">
-					                        <div class="unit_icon40x40 {{town.god}}"></div>
-					                      </span>
-								              </div>
-								              <div class="cell" *ngIf="hasWall" style="padding-top: 7px;">
-									              <!--<span [outerHTML]="town.wall | HideNoLossPipe"></span>-->
-									              <span *ngIf="town.wall!=null && town.wall!=''" class="build-cell" style="min-width: 70px;">
-						                      <div class="building_icon40x40 wall" matTooltip="Wall: {{town.wall}}"></div>
-										              <div>
-											              <span [outerHTML]="town.wall | HideNoLossPipe"></span>
+								              <div class='row_custom' *ngFor="let town of allCities">
+									              <div class="cell" matTooltip="{{town.type}}">
+										              <img src="../../assets/images/game/towninfo/attack.png" *ngIf="town.type === 'friendly_attack'">
+										              <div *ngIf="town.type === 'enemy_attack'" style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: ;">
+											              <img src="../../assets/images/game/towninfo/attack.png">
 										              </div>
-						                    </span>
-								              </div>
-								              <div class="cell" *ngIf="hasStonehail" style="padding-top: 7px;">
-									              <span *ngIf="town.stonehail!=null && town.stonehail!=''" class="build-cell" style="">
-						                      <div class="building_icon40x40 {{town.stonehail.building}}" matTooltip="Stonehail: {{town.stonehail.building}} {{town.stonehail.value}}"></div>
-										              <div>
-											              <span [outerHTML]="town.stonehail.value | HideNoLossPipe"></span>
-										              </div>
-						                    </span>
-								              </div>
-								              <div class="cell" *ngIf="hasSilver">
-									              <span *ngIf="town?.silver">{{town?.silver?.replace('(+',' (+')}}</span>
-								              </div>
-								              <div class="cell" *ngIf="hasConquest">
-									              <div *ngIf="town?.conquest_id && town?.conquest_id > 0">
-										              <a class="a-link-dialog" (click)="loadConquestDetails(town?.conquest_id)">View report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></a>
+										              <img src="../../assets/images/game/towninfo/wisdom.png" *ngIf="town.type === 'wisdom'">
+										              <img src="../../assets/images/game/towninfo/support.png" *ngIf="town.type === 'support'">
+										              <img src="../../assets/images/game/towninfo/conquer.png" *ngIf="town.type === 'attack_on_conquest'">
+										              <img src="../../assets/images/game/towninfo/espionage_2.67.png" *ngIf="town.type === 'spy'">
 									              </div>
-								              </div>
-								              <div class="cell" style="" *ngIf="csa!=false">
-									              <button *ngIf="!town.deleted || town?.deleted==false" name="open_bb" class="btn btn-danger" style=""
-									                      (click)="deleteIntel(town?.id); town.deleted = true;">
-										              <i class="fa fa-close"></i>&nbsp;Delete
-									              </button>
-									              <span *ngIf="town.deleted && town?.deleted==true" title="This record will be deleted within 24 hours.">
-																	<p style="font-size: 17px; margin: 0;" class="gd-secondary">Marked for deletion</p>
-																	<button name="open_bb" class="btn btn-primary btn-xs" style="margin-top: -6px;"
-																	        (click)="deleteIntelUndo(town?.id); town.deleted = false;">
-																		<i class="fa fa-arrow-left"></i>&nbsp;Undo
-																	</button>
-																</span>
+									              <div class="cell">
+										              {{town.date | IndexDate}}
+									              </div>
+									              <div class="cell" style="display: flex; margin-bottom: 8px;">
+						                      <span style="transform: scale(1.05); float: left; margin: 8px 12px 0 0;" *ngFor="let unit of town.units | ValuesPipe; let i = index;"
+						                            matTooltip="{{unit?.name?.replace('_',' ')}}">
+						                        <div class="unit_icon40x40 {{unit?.name}}"><span class="unit-val">{{unit?.count}}</span></div>
+						                        <span style="color: #d00;" *ngIf="unit?.killed>0">-{{unit?.killed}}</span>
+						                      </span>
+									              </div>
+									              <div class="cell" *ngIf="hasHero" style="min-width: 50px;">
+						                      <span style="transform: scale(1.05); float: left; margin: -19px 0 0 0;"
+						                            matTooltip="{{town?.hero?.replace('_',' ')}}">
+						                        <div class="unit_icon40x40 {{town?.hero}}"></div>
+						                      </span>
+									              </div>
+									              <div class="cell" *ngIf="hasGod" style="min-width: 50px;">
+										              <span style="transform: scale(1.05); float: left; margin: -18px 0 0 0;"
+										                    matTooltip="{{town.god}}">
+						                        <div class="unit_icon40x40 {{town.god}}"></div>
+						                      </span>
+									              </div>
+									              <div class="cell" *ngIf="hasWall" style="padding-top: 7px;">
+										              <!--<span [outerHTML]="town.wall | HideNoLossPipe"></span>-->
+										              <span *ngIf="town.wall!=null && town.wall!=''" class="build-cell" style="min-width: 70px;">
+							                      <div class="building_icon40x40 wall" matTooltip="Wall: {{town.wall}}"></div>
+											              <div>
+												              <span [outerHTML]="town.wall | HideNoLossPipe"></span>
+											              </div>
+							                    </span>
+									              </div>
+									              <div class="cell" *ngIf="hasStonehail" style="padding-top: 7px;">
+										              <span *ngIf="town.stonehail!=null && town.stonehail!=''" class="build-cell" style="">
+							                      <div class="building_icon40x40 {{town.stonehail.building}}" matTooltip="Stonehail: {{town.stonehail.building}} {{town.stonehail.value}}"></div>
+											              <div>
+												              <span [outerHTML]="town.stonehail.value | HideNoLossPipe"></span>
+											              </div>
+							                    </span>
+									              </div>
+									              <div class="cell" *ngIf="hasSilver">
+										              <span *ngIf="town?.silver">{{town?.silver?.replace('(+',' (+')}}</span>
+									              </div>
+									              <div class="cell hidden-xs hidden-sm" *ngIf="hasConquest">
+										              <div *ngIf="town?.conquest_id && town?.conquest_id > 0">
+											              <!--<a class="a-link-dialog" (click)="loadConquestDetails(town?.conquest_id)">View report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></a>-->
+											              <button class="gd-btn-2" (click)="loadConquestDetails(town?.conquest_id)">View report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></button>
+										              </div>
+									              </div>
+									              <div class="cell" style="" *ngIf="csa!=false">
+										              <button *ngIf="!town.deleted || town?.deleted==false" name="open_bb" class="btn btn-danger" style=""
+										                      (click)="deleteIntel(town?.id); town.deleted = true;">
+											              <i class="fa fa-close"></i>&nbsp;Delete
+										              </button>
+										              <span *ngIf="town.deleted && town?.deleted==true" title="This record will be deleted within 24 hours.">
+																		<p style="font-size: 17px; margin: 0;" class="gd-secondary">Marked for deletion</p>
+																		<button name="open_bb" class="btn btn-primary btn-xs" style="margin-top: -6px;"
+																		        (click)="deleteIntelUndo(town?.id); town.deleted = false;">
+																			<i class="fa fa-arrow-left"></i>&nbsp;Undo
+																		</button>
+																	</span>
+									              </div>
 								              </div>
 							              </div>
 						              </div>
