--- a/src/app/discord/discord.component.html
+++ b/src/app/discord/discord.component.html
@@ -1,14 +1,17 @@
 <div class="container" style="margin-top: 30px;">
     <div class="row">
-        <div class="col-lg-8 col-md-10 col-sm-12" style="float: none; margin: auto;">
+        <div class="col-lg-10 col-md-10 col-sm-12" style="float: none; margin: auto;">
             <div class=" alert alert-default alert-gd-1" style="padding: 0;">
                 <div>
                     <div class="header" style="background:#2C3E50">
                         <div class="logo" style="background-image:url(../../assets/images/favicon_lg_white.png)"></div>
                         <div class="name-and-links">
-                            <h2 style="color: #dde6e4;">GrepoData Bot</h2>
+	                        <h2 style="color: #dde6e4;">GrepoData Bot</h2>
+	                        <span style="color: #dde6e4; !important;">Add GrepoData commands to your Discord server!</span>
                         </div>
-                        <a target="_blank" rel="nofollow" href="https://discordapp.com/api/oauth2/authorize?client_id=652263344429858872&permissions=18432&scope=bot" alt="Add GrepoData Bot to Your Discord" class="button">Add to Discord</a>
+                        <a target="_blank" rel="nofollow" href="https://discordapp.com/api/oauth2/authorize?client_id=652263344429858872&permissions=18432&scope=bot" alt="Add GrepoData Bot to Your Discord" class="button">
+	                        Add to Discord
+                        </a>
                     </div>
                     <!--<div class="text-center"><h2 style=""> GrepoData Discord bot</h2>-->
                         <!--<h4><a href="https://discordapp.com/api/oauth2/authorize?client_id=652263344429858872&permissions=18432&scope=bot" target="_blank">-->
@@ -19,52 +22,63 @@
 
                 <div style="padding: 30px 30px 50px 30px;">
 
-                    <h1>Documentation</h1>
+                    <h1>List of commands</h1>
 
                     <hr>
 
-                    <h3>Scoreboard</h3>
+                    <h3>Statistics</h3>
+		                <div class="row">
+			                <div class="col-xs-5 vcenter"><pre>!gd setServer [server]</pre></div>
+			                <div class="col-xs-7 vcenter">Set the <strong>default server</strong> to [server] <br/>e.g. <span style="font-style: italic;">!gd setServer nl74</span> will change the default server to nl74</div>
+		                </div>
                     <div class="row">
-                        <div class="col-xs-5"><pre>!gd today</pre></div>
-                        <div class="col-xs-7">Shows today's scoreboard for the default server</div>
+                        <div class="col-xs-5 vcenter"><pre>!gd today</pre></div>
+	                    <div class="col-xs-7 vcenter">Shows today's <strong>scoreboard</strong> for the default server</div>
                     </div>
+		                <div class="row">
+			                <div class="col-xs-5 vcenter"><pre>!gd today [server]</pre></div>
+			                <div class="col-xs-7 vcenter">Shows the <strong>scoreboard</strong> for the given server <br/>E.g. !gd today nl74 will show the scoreboard for nl74</div>
+		                </div>
                     <div class="row">
-                        <div class="col-xs-5"><pre>!gd yesterday</pre></div>
-                        <div class="col-xs-7">Shows yesterday's scoreboard for the default server</div>
+                        <div class="col-xs-5 vcenter"><pre>!gd yesterday</pre></div>
+                        <div class="col-xs-7 vcenter">Shows yesterday's <strong>scoreboard</strong> for the default server</div>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-5"><pre>!gd today/yesterday [server]</pre></div>
-                        <div class="col-xs-7">Shows the scoreboard for the given server <br/>E.g. !gd today nl74 will show the scoreboard for nl74</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5"><pre>!gd setServer [server]</pre></div>
-                        <div class="col-xs-7">Set the default server to [server] <br/>E.g. !gd setServer nl74 will change the default server to nl74</div>
-                    </div>
+		                <div class="row">
+			                <div class="col-xs-5 vcenter"><pre>!gd heatmap [player_name]</pre></div>
+			                <div class="col-xs-7 vcenter">Shows the <strong>heatmap</strong> for the given player name</div>
+		                </div>
+		                <div class="row">
+			                <div class="col-xs-5 vcenter"><pre>!gd calculator [units]</pre></div>
+			                <div class="col-xs-7 vcenter">
+				                Calculate resource cost, attack value, defense value and population for troops.
+				                <br/>e.g. <span style="font-style: italic;">!gd calculator 95archer 55griff 85char</span>
+			                </div>
+		                </div>
 
                     <hr>
 
                     <h3>Enemy city intelligence</h3>
-                    <div class="row">
-                        <div class="col-xs-5"><pre>!gd intel</pre></div>
-                        <div class="col-xs-7">Links to the default intelligence index</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5"><pre>!gd userscript</pre></div>
-                        <div class="col-xs-7">Links to the default intelligence userscript</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5"><pre>!gd intel [town_id]</pre></div>
-                        <div class="col-xs-7">Shows the gathered town intel for [town_id]</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5"><pre>!gd intel [town_name]</pre></div>
-                        <div class="col-xs-7">Shows the gathered town intel for [town_name]</div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-5"><pre>!gd setIndex [index_key]</pre></div>
-                        <div class="col-xs-7">Set the active intelligence index key</div>
-                    </div>
+		                <div class="row">
+			                <div class="col-xs-5 vcenter"><pre>!gd setIndex [index_key]</pre></div>
+			                <div class="col-xs-7 vcenter">Set the active intelligence index key</div>
+		                </div>
 
+		                <div class="row">
+                        <div class="col-xs-5 vcenter"><pre>!gd intel</pre></div>
+                        <div class="col-xs-7 vcenter">Links to the default intelligence index</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5 vcenter"><pre>!gd userscript</pre></div>
+                        <div class="col-xs-7 vcenter">Links to the default intelligence userscript</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5 vcenter"><pre>!gd intel [town_id]</pre></div>
+                        <div class="col-xs-7 vcenter">Shows the gathered town intel for [town_id]</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-5 vcenter"><pre>!gd intel [town_name]</pre></div>
+                        <div class="col-xs-7 vcenter">Shows the gathered town intel for [town_name]</div>
+                    </div>
                     <!--<br/>-->
                     <!--<p>-->
                         <!--<strong>GrepoData Bot also listens to town BBcode.</strong><br/> E.g. posting '[town]143524[/town]' will show the town intel for town 143524.-->
