--- a/src/app/discord/discord.component.scss
+++ b/src/app/discord/discord.component.scss
@@ -2,6 +2,13 @@ pre {
   height: unset !important;
   max-height: unset !important;
   min-width: unset !important;
+  margin: 8px 0 !important;
+}
+
+.vcenter {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
 }
 
 .header {
@@ -11,7 +18,7 @@ pre {
   position: relative;
   top: -1px;
   left: -1px;
-  width: 100%;
+  width: calc(100% + 2px);
   padding: 25px;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -36,10 +43,8 @@ pre {
 }
 
 .button {
-  background-color: #18bc9b;
+  background-color: #7289da;
   border-radius: 3px;
-  border: none;
-  outline: none;
   font-size: 15px;
   padding: 15px 25px;
   position: relative;
@@ -47,18 +52,21 @@ pre {
   transition: all .12s ease-out;
   top: 0;
   cursor: pointer;
-  color: #dde6e4;
-}
-.button {
-  border: 2px solid #dde6e4;
-  padding: 6px 10px;
-  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+
+  //border: 2px solid #dde6e4;
+  //text-align: center;
+
+  font-family: Whitney,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-weight: 400;
 }
 
 .button:hover {
-  border: 2px solid hsla(0, 0%, 100%, .3);
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-transform: none;
-  transform: none;
+  transform: translateY(-1px);
+  //border: 2px solid hsla(0, 0%, 100%, .3);
+  //-webkit-box-shadow: none;
+  //box-shadow: none;
+  //-webkit-transform: none;
+  //transform: none;
 }
