--- a/src/app/indexer/siege/siege.component.html
+++ b/src/app/indexer/siege/siege.component.html
@@ -83,7 +83,7 @@
 									</div>
 								</div>
 								<div class="col-xs-6 text-left left att"  [ngStyle]="{'max-height': isCard?'96px':'144px'}">
-									Attacking
+									Attacking<span class="hidden-xs hidden-sm" style="font-style: italic;">&nbsp;({{conquest.num_attacks_counted}} attack<span *ngIf="conquest.num_attacks_counted>1">s</span>)</span>
 									<div *ngFor="let bell of conquest.belligerent_all" style="direction: ltr;">
 										<a *ngIf="!hideKey" routerLink="/indexer/alliance/{{key}}/{{world}}/{{bell.alliance_id}}">
 											<img src="../../assets/images/ally_ico.png"/>&nbsp;{{bell.alliance_name}}
@@ -108,10 +108,23 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-xs-12 conquest-losses" *ngIf="!isCard">
+							<div class="row">
+								<div class="col-xs-12 text-center" style="position: absolute;">
+									<strong>Battle points<span class="hidden-xs hidden-sm"> (without modifier)</span></strong>
+								</div>
+								<div class="col-xs-6 text-left">
+									<span class="diff-pos">+{{conquest.total_bp_def | NumberFilter}}</span><br/>
+								</div>
+								<div class="col-xs-6 text-right">
+									<span class="diff-pos">+{{conquest.total_bp_att | NumberFilter}}</span><br/>
+								</div>
+							</div>
+						</div>
 						<div class="col-xs-12 conquest-losses">
 							<div class="row">
 								<div class="col-xs-6 text-left left att">
-									<strong>Attacker losses</strong>&nbsp;<span class="hidden-xs hidden-sm">({{conquest.num_attacks_counted}} attack<span *ngIf="conquest.num_attacks_counted>1">s</span>)</span>
+									<strong>Attacker losses</strong><span class="diff-neg">&nbsp;(-{{conquest.total_bp_att | NumberFilter}})</span><br/>
 									<div class="unit-row">
 										<div class="unit-icon-lg" *ngFor="let unit of objectKeys(conquest.total_losses_att)">
 											<div class="unit_icon40x40 {{unit}}">
@@ -123,10 +136,10 @@
 									</div>
 								</div>
 								<div class="col-xs-6 text-right right def">
-									<strong>Defender losses</strong><br/>
+									<strong>Defender losses</strong><span class="diff-neg">&nbsp;(-{{conquest.total_bp_def | NumberFilter}})</span><br/>
 									<div class="unit-row" style="float: right;" [ngStyle]="{'min-height': isCard?'88px':'44px'}">
 						        <span *ngFor="let unit of objectKeys(conquest.total_losses_def)">
-							        <div class="unit-icon-lg" *ngIf="conquest.total_losses_def[unit] > 20 || conquest.total_losses_def.length <= 5 || unit=='colonize_ship'" style="float: right !important;">
+							        <div class="unit-icon-lg" *ngIf="!isCard || conquest.total_losses_def[unit] > 20 || objectKeys(conquest.total_losses_def).length <= 5 || unit=='colonize_ship'" style="float: right !important;">
 								        <div class="unit_icon40x40 {{unit}}">
 									        <span class="unit-val" [ngStyle]="{'font-size': conquest.total_losses_def[unit]<=9999?'17px':(conquest.total_losses_def[unit]<=99999?'15px':'13px')}">
 										        {{conquest.total_losses_def[unit]}}
@@ -167,7 +180,7 @@
 									<div class="table" id="table_players_rows">
 										<div class='row_custom' *ngFor="let report of reports">
 											<div class="cell hidden-xs hidden-sm" style="max-width: 100px; width: 100px; font-size: 16px; vertical-align: top;">
-												{{report.date | Datex : "D MMM HH:mm"}}
+												{{report.date | Datex : "D MMM HH:mm:ss"}}
 												<div class="attack_type" style="margin: 10px;">
 													<div class="attack_type32x32 attack" [ngClass]="{ 'sea_attack': report?.attacker?.attack_type == 'sea_attack' }"></div>
 												</div>
