--- a/src/app/indexer/table/table.component.html
+++ b/src/app/indexer/table/table.component.html
@@ -55,7 +55,7 @@
 					</div>
 					<div class="cell" style="text-align: left;" *ngIf="isSeaUnit" title="{{type=='fire'?'attack ship':'bireme'}}">
 		        <span class="unit-icon-xs hidden-xs">
-		          <div class="unit_icon40x40 {{type=='fire'?'attack_ship':'bireme'}}"></div>
+		          <div class="unit_icon40x40 {{type}}"></div>
 		        </span>
 						<span [outerHTML]="town.units | HideNoLossPipe"></span>
 					</div>
