--- a/src/app/indexer/table/table.component.scss
+++ b/src/app/indexer/table/table.component.scss
@@ -74,6 +74,9 @@
 .header_bir {
   background: #2980b9 !important;
 }
+.header_trir {
+  background: #ea9753 !important;
+}
 .header_def {
   background: #2980b9 !important;
 }
