Fix indexer version detection

--- a/src/app/index-version/index-version.component.html
+++ b/src/app/index-version/index-version.component.html
@@ -47,3 +47,4 @@
 </div>
 
 <span style="display: none;" id="userscript_version"></span>
+<!--<span style="display: none;" id="userscript_version"><div id="script_version">4.0.3</div></span>-->
